# aula08_python_jornada

./: README.md  __init__.py  dados.parquet  etl.py  pyproject.toml
