[project]
name = "aula08-python-jornada"
version = "0.1.0"
description = ""
authors = [
    {name = "WesleyPenteado",email = "wesleycosta.ne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
